--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title> Project-1 </title>
+</head>
 
+<body>
+	<h1> Project-1: Welcome to my website! </h1>
+		<nav>
+		<ul>
+		<li><a href="index.html" title="This is the home page">Home</a></li>
+		<li><a href="hobby.html" title="Click here to know my hobbies">My Favorite Hobby </a></li>
+		<li><a href="resume.html" title="Let's take a look at my Resume">Resume</a></li>
+		</ul>
+		</nav>	
+	<h2> About Me </h2>
+</body>
+
+</html>
