--- a/hobby.html
+++ b/hobby.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title> Project-1 </title>
+</head>
 
+<body>
+	<h1> Project-1: Welcome to my website! </h1>
+		<nav>
+		<ul>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="hobby.html">My Favorite Hobby</a></li>
+		<li><a href="resume.html">Resume</a></li>
+		</ul>
+		</nav>
+	<h2> My Favorite Hobby: Photography </h2>
+</body>
+
+</html>
