--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 <body>
 	<h1> Project-1: Welcome to my website! </h1>
 		<nav>
-		<ul>
-		<li><a href="index.html" title="This is the home page">Home</a></li>
-		<li><a href="hobby.html" title="Click here to know my hobbies">My Favorite Hobby </a></li>
-		<li><a href="resume.html" title="Let's take a look at my Resume">Resume</a></li>
-		</ul>
+      <ul>
+        <li><a href="index.html" title="This is the home page">Home</a></li>
+        <li><a href="hobby.html" title="Click here to know my hobbies">My Favorite Hobby </a></li>
+        <li><a href="resume.html" title="Let's take a look at my Resume">My Resume</a></li>
+      </ul>
 		</nav>	
-	<h2> About Me </h2>
+	
+  <h2> My Best Clicks: </h2>
+	
+  <p><strong> Playa Del Carmen, Mexico</p>
+  <img src="pdc.jpg" alt="Playa Del Carmen">
 </body>
 
 </html>
