--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	
   <h2> My Best Clicks: </h2>
 	
-  <p><strong> Playa Del Carmen, Mexico</p>
-  <	img src="pdc.jpg" alt="Playa Del Carmen">
+  <p><strong> Playa Del Carmen, Mexico</strong></p>
+  <img src="pdc.jpg" alt="Playa Del Carmen">
 
-	</body>
+</body>
 </html>
