--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title> Project-1 </title>
 </head>
 
- <body>
+<body>
 	<h1> Project-1: Welcome to my website! </h1>
 		<nav>
       <ul>
@@ -17,8 +17,11 @@
 	
   <h2> My Best Clicks: </h2>
 	
-  <p><strong> Playa Del Carmen, Mexico</strong></p>
-  <img src="pdc.jpg" alt="Playa Del Carmen">
+  <p><strong> Playa Del Carmen, Mexico<strong></p>
+  	<img src="pdc.jpg" alt="Playa Del Carmen">
+  
+		<P><strong> Fall Photoshoot of My Niece, Missouri</strong></p>
+  	<img src="kjp.jpg" alt="Kanvi's Fall Photoshoot">
 
 </body>
 </html>
