--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	
   <h2> My Best Clicks: </h2>
 	
-  <p><strong> Playa Del Carmen, Mexico<strong></p>
+  <p><strong> Playa Del Carmen, Mexico</strong></p>
   	<img src="pdc.jpg" alt="Playa Del Carmen">
   
-		<P><strong> Fall Photoshoot of My Niece, Missouri</strong></p>
+	<P><strong> Fall Photoshoot of My Niece, Missouri</strong></p>
   	<img src="kjp.jpg" alt="Kanvi's Fall Photoshoot">
 
 </body>
