--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	
   <p><strong> Playa Del Carmen, Mexico</strong></p>
   <img src="pdc.jpg" alt="Playa Del Carmen">
-  <P><strong> Fall Photoshoot of My Niece, Missouri</strong></p>
+  <p><strong> Fall Photoshoot of My Niece, Missouri</strong></p>
   <img src="kjp.jpg" alt="Kanvi's Fall Photoshoot">
 </body>
 
