--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 	
   <h2> My Best Clicks: </h2>
     <p><strong> Playa Del Carmen, Mexico</strong></p>
-      <img src="pdc.jpg" alt="Playa Del Carmen">
+      <img src="Project-1/pdc.jpg" alt="Playa Del Carmen">
       <p> I took this picture in May 2015, when I went to Mexico with my husband for vacation. This is one of the biggest beach of Playa Del Carmen, a city in 
           Mexico. I was trying to capture the landing parachute and the waves at the same time. Luckily, I was able to capture both, waves and the landing 
           parachute at the same time. </p>
           
     <p><strong> Fall Photoshoot of Niece - Kanvi @ Missouri</strong></p>
-      <img src="kjp.jpg" alt="Kanvi's Fall Photoshoot">
+      <img src="Project-1/kjp.jpg" alt="Kanvi's Fall Photoshoot">
       <p> This cute little baby girl in the picture is my niece. Her name is Kanvi. I did her photshoot during fall when she was almost about to turn one year
           old in September 2015. This picture was taken at the park in Moberly, Missouri; that is where I am from. </p>
   
     <p><strong> My Best Friend - Guzel's Winter Photoshoot @ Missouri</strong></p>
-      <img src="guzel.jpg" alt="Guzel's Winter Photoshoot">
+      <img src="Project-1/guzel.jpg" alt="Guzel's Winter Photoshoot">
       <p> This beautiful girl is my best friend, Guzel. She is from Turkmenistan. She is a foreign student who came to United States to get her bachelor's in
           Journalism. This picture of her was taken by me in December 2016 at University of Missouri - Columbia, Missouri. </p>
       
