--- a/resume.html
+++ b/resume.html
@@ -38,8 +38,8 @@
     <ul> 
       <li> Moberly Area Community College &nbsp;&nbsp; Moberly, MO
         <ul>
-          <li> Associate of Applied Science degree &nbsp;&nbsp; 2013 - 2015 </li>
-               Computer Information Technology - Networking emphasis
+          <li> Associate of Applied Science degree &nbsp;&nbsp; 2013 - 2015 
+	       Computer Information Technology - Networking emphasis </li>
         </ul>
       </li>
     </ul>
