--- a/resume.html
+++ b/resume.html
@@ -38,8 +38,7 @@
     <ul> 
       <li> Moberly Area Community College &nbsp;&nbsp; Moberly, MO
         <ul>
-          <li> Associate of Applied Science degree &nbsp;&nbsp; 2013 - 2015 
-	       Computer Information Technology - Networking emphasis </li>
+          <li> Associate of Applied Science degree in CIT-Networking  &nbsp;&nbsp; 2013 - 2015 </li>
         </ul>
       </li>
     </ul>
